--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       }
 
       .content-container {
-          height: calc(var(--tg-viewport-stable-height) - var(--tg-content-safe-area-inset));
+          min-height: var(--tg-viewport-stable-height);
           overflow-y: auto;
           padding-bottom: var(--tg-content-safe-area-inset);
+          box-sizing: border-box;
       }
 
       /* Стили для страниц */
@@ -125,7 +126,7 @@
         <h2 class="mdl-card__title-text">Карточка автомобиля</h2>
       </div>
       <div class="mdl-card__supporting-text">
-        <p><strong>Марка:</strong> <span id="card-brand"></span></p>
+        <p><strong>Марка_:</strong> <span id="card-brand"></span></p>
         <p><strong>Модель:</strong> <span id="card-model"></span></p>
         <p><strong>Год выпуска:</strong> <span id="card-year"></span></p>
         <p><strong>VIN-номер:</strong> <span id="card-vin"></span></p>
